<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryLightColor"
    tools:context=".activity.ChangePassActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/changeToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:minHeight="?attr/actionBarSize"
        app:title="Title"
        app:titleMarginStart="32dp" />

    <EditText
        android:id="@+id/edtChnPassOld"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/edtChnPass1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:hint="@string/old_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/edtChnPass1"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/edtChnPass2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:hint="@string/new_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/edtChnPass2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/btnChnPass"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:hint="@string/new_password_again"
        android:inputType="textPassword" />


    <Button
        android:id="@+id/btnChnPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/change_password" />

</RelativeLayout>
