<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryLightColor">


        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/primaryLightColor"
            app:menu="@menu/top_app_bar"
            app:navigationIcon="@drawable/ic_menu_hamburger"
            app:title="@string/app_name"
            app:titleCentered="true" />
    </com.google.android.material.appbar.AppBarLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"

                android:layout_below="@id/appBarLayout">

                <com.google.android.material.search.SearchBar
                    android:id="@+id/search_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/search_for_users" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/messageBoardRecView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/primaryLightColor"
                    android:clipToPadding="true" />
            </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_navigation"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_below="@id/appBarLayout"
        android:gravity="center">

            <ImageView
                android:id="@+id/logoImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_messages" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/looks_quite_here_say_hi_to_someone"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:menu="@menu/bottom_nav_menu" />

    <com.google.android.material.navigation.NavigationView
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</RelativeLayout>